[gd_scene load_steps=4 format=3 uid="uid://dcdeuskklchca"]

[ext_resource type="Script" uid="uid://cyqnrisvpusw3" path="res://addons/simusdev/worldsaver/test_worldsave.gd" id="1_tyy8k"]
[ext_resource type="Script" uid="uid://duydcwnwt615b" path="res://addons/simusdev/worldsaver/SD_NodeWorldSaverSerializedInstancesSpawner.gd" id="2_nrldy"]
[ext_resource type="PackedScene" uid="uid://cm8evl4o0pppn" path="res://addons/simusdev/worldsaver/test_save_instance.tscn" id="3_tyy8k"]

[node name="TestWorldsave" type="Node2D"]
script = ExtResource("1_tyy8k")

[node name="SD_NodeWorldSaverSerializedInstancesSpawner" type="Node" parent="."]
script = ExtResource("2_nrldy")
spawn_at_save_loaded = true
action_if_node_exists = 1
metadata/_custom_type_script = "uid://duydcwnwt615b"

[node name="other_parent" type="Node2D" parent="."]

[node name="instance" parent="." instance=ExtResource("3_tyy8k")]
position = Vector2(471, 472)

[node name="save" type="Button" parent="."]
offset_right = 300.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 32
text = "save"

[node name="load" type="Button" parent="."]
offset_top = 74.0
offset_right = 300.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 32
text = "load"

[node name="delete_instance" type="Button" parent="."]
offset_top = 148.0
offset_right = 300.0
offset_bottom = 218.0
theme_override_font_sizes/font_size = 24
text = "delete instance"

[node name="reparent" type="Button" parent="."]
offset_top = 223.0
offset_right = 300.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 24
text = "reparent"

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="delete_instance" to="." method="_on_delete_instance_pressed"]
[connection signal="pressed" from="reparent" to="." method="_on_reparent_pressed"]
